website/versioned_docs/version-7.0.0/api/options-bottomTab.mdx
---
id: options-bottomTab
title: Bottom Tab Options
sidebar_label: Bottom Tab
---

```js
const options = {
  bottomTab: {},
};
```

## `badge`

| Type   | Required | Platform |
| ------ | -------- | -------- |
| string | No       | Both     |

## `badgeColor`

| Type  | Required | Platform |
| ----- | -------- | -------- |
| color | No       | Both     |

## `animateBadge`

| Type    | Required | Platform |
| ------- | -------- | -------- |
| boolean | No       | Android  |

## `disableIconTint`

| Type    | Required | Platform |
| ------- | -------- | -------- |
| boolean | No       | Both     |

## `dotIndicator`

| Type         | Required | Platform |
| ------------ | -------- | -------- |
| DotIndicator | No       | Both     |

## `fontFamily`

| Type   | Required | Platform |
| ------ | -------- | -------- |
| string | No       | Both     |

## `fontSize`

| Type   | Required | Platform |
| ------ | -------- | -------- |
| number | No       | Both     |

## `icon`

| Type   | Required | Platform |
| ------ | -------- | -------- |
| number | No       | Both     |

## `iconColor`

| Type  | Required | Platform |
| ----- | -------- | -------- |
| color | No       | Both     |

## `selectedFontSize`

| Type   | Required | Platform |
| ------ | -------- | -------- |
| number | No       | Both     |

## `selectedIcon`

| Type   | Required | Platform |
| ------ | -------- | -------- |
| number | No       | Both     |

## `selectedIconColor`

| Type  | Required | Platform |
| ----- | -------- | -------- |
| color | No       | Both     |

## `iconInsets`

| Type       | Required | Platform |
| ---------- | -------- | -------- |
| IconInsets | No       | Both     |

## `disableSelectedIconTint`

| Type    | Required | Platform |
| ------- | -------- | -------- |
| boolean | No       | Android  |

## `disableIconTint`

| Type    | Required | Platform |
| ------- | -------- | -------- |
| boolean | No       | Android  |

## `selectedTextColor`

| Type  | Required | Platform |
| ----- | -------- | -------- |
| color | No       | Both     |

## `testID`

| Type   | Required | Platform |
| ------ | -------- | -------- |
| string | No       | Both     |

## `text`

| Type   | Required | Platform |
| ------ | -------- | -------- |
| string | No       | Both     |

## `textColor`

| Type  | Required | Platform |
| ----- | -------- | -------- |
| color | No       | Both     |

## DotIndicator

##### color?: color

##### size?: number

##### visible?: boolean

##### animate?: boolean

## IconInsets

##### top?: number

##### left?: number

##### right?: number

##### bottom?: number
